# mandelbrot

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  mandelbrot.py  pyproject.toml
.github/workflows/: pdf.yml
attic/: imandelbrot.py
docs/: help.txt
src/wallpaper/: mandelbrot.py
toys/: imandelbrot.py  requirements.txt
wallpaper/: README.md  mandelbrot.py  requirements.txt
